[project]
name = "litequeue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joe Pasquantonio", email = "joe.pasquantonio@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncio>=3.4.3",
    "click>=8.1.8",
    "colorlog>=6.9.0",
    "pyyaml>=6.0.2",
    "uvloop>=0.21.0",
]

[project.scripts]
litequeue = "litequeue.server:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
